# agentic_environments

./: README.md  agentic_environments.code-workspace  pyproject.toml
examples/calculator_agent/: README.md  pyproject.toml
examples/calculator_agent/datasets/: basic_calculations_eval.csv
examples/calculator_agent/environment/: calculation_env_state.py  calculation_enviroment.py  calculation_environment.py
examples/calculator_agent/environment/tools/: calculator.py
examples/calculator_agent/evaluation/: calc_evals.py  eval_results_phi_4_mini_instruct.csv  main.py  runner.py
examples/calculator_agent/tests/: test_answer_verifier.py  test_calculator.py
src/agentic_environments/: agentic_system.py  environment.py  model_output.py
src/agentic_environments/tool_call_parsers/: phi_4_mini_instruct.py  xml_tags.py
