[project]
name = "agentic-environments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Austin", email = "dan@aituning.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
