[project]
name = "calculator-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentic-environments",
    "pandas>=2.2.3",
    "pydantic>=2.11.1",
    "python-dotenv>=1.1.0",
    "torch>=2.6.0",
    "transformers>=4.50.3",
]

[tool.uv.sources]
agentic-environments = { workspace = true }

[tool.uv.workspace]
members = [
	"../../../agentic_environments"
]

